@@ -8,6 +8,7 @@
 package org.dellroad.jibxbindings.pidf.lo.ecd;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.dellroad.jibxbindings.pidf.LangContent;
@@ -15,16 +16,16 @@ import org.dellroad.jibxbindings.pidf.LangContent;
 /**
  * The {@code <pi:EmergencyCallData.Comment>} element.
  */
-public class Comment {
+public class Comment extends AbstractDataProviderReferencing {
 
-    private String dataProviderReference;                   // mandatory
     private List<LangContent> comments = new ArrayList<>();
 
-    public String getDataProviderReference() {
-        return this.dataProviderReference;
+    public Comment() {
     }
-    public void setDataProviderReference(String dataProviderReference) {
-        this.dataProviderReference = dataProviderReference;
+
+    public Comment(String dataProviderReference, LangContent... comments) {
+        super(dataProviderReference);
+        this.comments.addAll(Arrays.asList(comments));
     }
 
     public List<LangContent> getComments() {
