@@ -8,23 +8,25 @@
 package org.dellroad.jibxbindings.pidf.lo.ecd;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 /**
  * The {@code <svc:EmergencyCallData.ServiceInfo>} element.
  */
-public class ServiceInfo {
+public class ServiceInfo extends AbstractDataProviderReferencing {
 
-    private String dataProviderReference;                   // mandatory
     private String serviceEnvironment;                      // mandatory
     private List<String> serviceTypes = new ArrayList<>();  // mandatory (one or more)
     private String serviceMobility;                         // mandatory
 
-    public String getDataProviderReference() {
-        return this.dataProviderReference;
+    public ServiceInfo() {
     }
-    public void setDataProviderReference(String dataProviderReference) {
-        this.dataProviderReference = dataProviderReference;
+
+    public ServiceInfo(String dataProviderReference, String serviceMobility, String... serviceTypes) {
+        super(dataProviderReference);
+        this.setServiceMobility(serviceMobility);
+        this.serviceTypes.addAll(Arrays.asList(serviceTypes));
     }
 
     public String getServiceEnvironment() {
