@@ -7,7 +7,7 @@
     <include path="../../langContent.xml"/>
     <mapping abstract="true" type-name="com:comment" class="org.dellroad.jibxbindings.pidf.lo.ecd.Comment">
         <namespace uri="urn:ietf:params:xml:ns:EmergencyCallData:Comment" default="elements" prefix="com"/>
-        <value name="DataProviderReference" field="dataProviderReference"/>
+        <value name="DataProviderReference" get-method="getDataProviderReference" set-method="setDataProviderReference"/>
         <collection field="comments" create-type="java.util.ArrayList">
             <structure name="Comment" map-as="pidf:langContent"/>
         </collection>
