@@ -5,7 +5,7 @@
   xmlns:svc="urn:ietf:params:xml:ns:EmergencyCallData:ServiceInfo">
     <mapping abstract="true" type-name="svc:serviceInfo" class="org.dellroad.jibxbindings.pidf.lo.ecd.ServiceInfo">
         <namespace uri="urn:ietf:params:xml:ns:EmergencyCallData:ServiceInfo" default="elements" prefix="svc"/>
-        <value name="DataProviderReference" field="dataProviderReference"/>
+        <value name="DataProviderReference" get-method="getDataProviderReference" set-method="setDataProviderReference"/>
         <value name="ServiceEnvironment" field="serviceEnvironment"/>
         <collection field="serviceTypes" create-type="java.util.ArrayList">
             <value name="ServiceType" type="java.lang.String"/>
